--- a/frontend/src/pages/company/components/CompanyDetail.scss
+++ b/frontend/src/pages/company/components/CompanyDetail.scss
@@ -26,6 +26,7 @@
     justify-content: center;
     padding: 8px 20px;
     border-radius: 25px;
+    height: 42px;
 
     span {
       font-size: 14px;
