--- a/frontend/src/shared/ui/Button/Button.scss
+++ b/frontend/src/shared/ui/Button/Button.scss
@@ -22,7 +22,7 @@
   }
 
   &--md {
-    padding: $spacing-lg $spacing-md;
+    padding: $spacing-lg $spacing-2xl;
     font-size: $font-size-base;
   }
 
@@ -33,7 +33,7 @@
 
   // Варианты
   &--primary {
-    padding: 16px 24px;
+    padding: $spacing-lg $spacing-2xl;
     background: var(--color-accent);
     border: none;
     border-radius: 25px;
@@ -65,7 +65,7 @@
 
 
   &--secondary {
-    background: transparent;
+    background: var(--color-bg-secondary);
     color: var(--color-text-primary);
     border: 1px solid var(--color-border);
     backdrop-filter: blur($blur-sm);
