--- a/frontend/src/pages/share-contact/ShareContactPage.scss
+++ b/frontend/src/pages/share-contact/ShareContactPage.scss
@@ -99,7 +99,11 @@
     border-radius: 24px;
     overflow: hidden;
 
-    div {
+    .card {
+      background: none;
+    }
+    
+    .card__content {
       flex-direction: row;
     }
   }
@@ -147,7 +151,6 @@
     border: none;
     cursor: pointer;
     border-radius: 8px;
-    color: rgb(255, 255, 255);
   }
 
   // Add card button
