Исправлен Padding модальных окнон

--- a/frontend/src/shared/ui/Modal/Modal.scss
+++ b/frontend/src/shared/ui/Modal/Modal.scss
@@ -87,6 +87,7 @@
   &__content {
     color: var(--color-text-secondary);
     line-height: $line-height-relaxed;
+    padding: 20px;
   }
 
   // Mobile: bottom sheet style
