--- a/frontend/src/features/email-modal/ui/EmailModal.scss
+++ b/frontend/src/features/email-modal/ui/EmailModal.scss
@@ -7,7 +7,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem 1.5rem 0;
   }
 
   &__title {
@@ -19,10 +18,10 @@
   }
 
   &__form {
-    padding: 1.5rem;
     display: flex;
     flex-direction: column;
     gap: 1.25rem;
+    padding-top: 1rem;
   }
 
   &__description {
