--- a/frontend/src/shared/ui/Card/Card.scss
+++ b/frontend/src/shared/ui/Card/Card.scss
@@ -34,3 +34,11 @@
     position: relative;
   }
 }
+
+.section-divider {
+  width: 100%;
+  height: 1px;
+  background: var(--color-bg-tertiary);
+  border-radius: 55px;
+  margin: 0;
+}
