--- a/frontend/src/pages/contacts/ContactsPage.scss
+++ b/frontend/src/pages/contacts/ContactsPage.scss
@@ -39,7 +39,8 @@
     align-items: center;
     justify-content: center;
     padding: 8px 20px;
-    border-radius: 16px;
+    border-radius: 25px;
+    height: 42px;
   }
 
   &__title {
