--- a/frontend/src/pages/company/components/CompanyDetail.scss
+++ b/frontend/src/pages/company/components/CompanyDetail.scss
@@ -245,7 +245,7 @@
     font-weight: 400;
     font-size: 16px;
     line-height: 1.3;
-    color: var(--color-text-primary);
+    color: #0081ff;
   }
 
   &__card-row {
